--- a/main.ipynb
+++ b/main.ipynb
@@ -8,7 +8,17 @@
    "source": [
     "# ht3\n",
     "# roberto rios\n",
-    "# javier valle"
+    "# Javier Valle 20159\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ejercicio 5: Haga ingeniería de características, ¿qué variables cree que puedan ser mejores predictores para el precio de las casas? Explique en que basó la selección o no de las variables. \n",
+    "\n"
    ]
   }
  ],
