--- a/main.ipynb
+++ b/main.ipynb
@@ -10,6 +10,29 @@
     "# roberto rios\n",
     "# javier valle"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pandas import read_csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = read_csv('train.csv')\n",
+    "# df = pd.DataFrame()\n",
+    "\n",
+    "print(df)"
+   ]
   }
  ],
  "metadata": {
