--- a/Ejemplo de Regresión Lineal.ipynb
+++ b/Ejemplo de Regresión Lineal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,9 +238,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'datos' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m Specie \u001b[39m=\u001b[39m datos\u001b[39m.\u001b[39mpop(\u001b[39m\"\u001b[39m\u001b[39mSpecie\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39m#La variable respuesta\u001b[39;00m\n\u001b[0;32m      2\u001b[0m y \u001b[39m=\u001b[39m datos\u001b[39m.\u001b[39mpop(\u001b[39m\"\u001b[39m\u001b[39mPetal.length\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39m#La variable respuesta\u001b[39;00m\n\u001b[0;32m      3\u001b[0m X \u001b[39m=\u001b[39m datos \u001b[39m#El resto de los datos\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'datos' is not defined"
+     ]
+    }
+   ],
    "source": [
     "Specie = datos.pop(\"Specie\") #La variable respuesta\n",
     "y = datos.pop(\"Petal.length\") #La variable respuesta\n",
@@ -684,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
